Port skk to fcitx5

--- a/gui/adddictdialog.ui
+++ b/gui/adddictdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>356</width>
-    <height>184</height>
+    <height>262</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="typeLabel">
        <property name="text">
-        <string/>
+        <string>&amp;Type:</string>
        </property>
        <property name="buddy">
         <cstring>typeComboBox</cstring>
@@ -39,7 +39,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="pathLabel">
        <property name="text">
-        <string/>
+        <string>&amp;Path:</string>
        </property>
        <property name="buddy">
         <cstring>urlLineEdit</cstring>
@@ -58,8 +58,7 @@
          </property>
          <property name="icon">
           <iconset theme="document-open">
-           <normaloff/>
-          </iconset>
+           <normaloff>.</normaloff>.</iconset>
          </property>
         </widget>
        </item>
@@ -68,7 +67,7 @@
      <item row="2" column="0">
       <widget class="QLabel" name="hostLabel">
        <property name="text">
-        <string/>
+        <string>&amp;Host:</string>
        </property>
        <property name="buddy">
         <cstring>hostLineEdit</cstring>
@@ -78,7 +77,7 @@
      <item row="3" column="0">
       <widget class="QLabel" name="portLabel">
        <property name="text">
-        <string/>
+        <string>&amp;Port:</string>
        </property>
        <property name="buddy">
         <cstring>portSpinBox</cstring>
