Fix dict manager loading dict file.
Improve the validation of add dict dialog
Enable reload dict on the fly when config changes.
Add encoding option.
Add debugging log for loading dict.

--- a/gui/adddictdialog.ui
+++ b/gui/adddictdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>356</width>
-    <height>262</height>
+    <height>347</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,6 +16,9 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QFormLayout" name="formLayout">
+     <property name="verticalSpacing">
+      <number>6</number>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="typeLabel">
        <property name="text">
@@ -29,7 +32,7 @@
      <item row="0" column="1">
       <widget class="QComboBox" name="typeComboBox">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -74,6 +77,13 @@
        </property>
       </widget>
      </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="hostLineEdit">
+       <property name="text">
+        <string>localhost</string>
+       </property>
+      </widget>
+     </item>
      <item row="3" column="0">
       <widget class="QLabel" name="portLabel">
        <property name="text">
@@ -97,10 +107,33 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="hostLineEdit">
+     <item row="5" column="1">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="encodingLabel">
        <property name="text">
-        <string>localhost</string>
+        <string>Encoding:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="encodingEdit">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="placeholderText">
+        <string notr="true">EUC-JP</string>
        </property>
       </widget>
      </item>
@@ -124,7 +157,6 @@
   <tabstop>browseButton</tabstop>
   <tabstop>hostLineEdit</tabstop>
   <tabstop>portSpinBox</tabstop>
-  <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
  <connections>
